fix css stuffs with icons being too low-contrast with dark theme, fix stuff with navbar / html / body (body seemed to have default margins of 8px), etc.

--- a/web/static/global.css
+++ b/web/static/global.css
@@ -33,12 +33,28 @@
 }
 
 html {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-items: center;
+  scrollbar-gutter: stable;
   background-color: #fffdf5;
   background-image: linear-gradient(45deg, #fffdf5 0%, #fff6f9 100%);
+  width: 100vw;
+  overflow-x: hidden;
+  ::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+  margin: 0px; /* body seems to otherwise default to margin: 8px; */
+  /* scrollbar width is 100vw - 100% */
+}
+.dark html {
+  background-color: #312d37 !important;
+  background-image: none;
+}
+.dark body {
+  background-color: #312d37 !important;
+  background-image: none;
+}
+
 }
 .container {
   /* for centring and positioning centre-container */
@@ -148,8 +164,7 @@ img {
 
 /* inverted styles for dark mode */
 .dark body {
-  /* container but for dark theme */
-  background-color: #1a1a1a;
+  background-color: #312d37;
   color: #ffffff;
 }
 .dark .container {
@@ -310,8 +325,8 @@ button {
 .material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }
 
 /* rules for using icons as white on a dark background */
-.material-icons.md-light { color: rgba(255, 255, 255, 1); }
-.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
+.material-icons.md-light { color: #5a5467; }
+.material-icons.md-light.md-inactive { color: rgba(90, 84, 103, 0.3); }
 
 
 /* thank you w3schools for these css rules! */
@@ -343,7 +358,6 @@ However, delay the fade out process for 2.5 seconds */
     fadein 0.5s,
     fadeout 0.5s 2.5s;
 }
-
 /* Animations to fade the snackbar in and out */
 @-webkit-keyframes fadein {
   from {
@@ -355,7 +369,6 @@ However, delay the fade out process for 2.5 seconds */
     opacity: 1;
   }
 }
-
 @keyframes fadein {
   from {
     bottom: 0;
@@ -366,7 +379,6 @@ However, delay the fade out process for 2.5 seconds */
     opacity: 1;
   }
 }
-
 @-webkit-keyframes fadeout {
   from {
     bottom: 30px;
@@ -377,7 +389,6 @@ However, delay the fade out process for 2.5 seconds */
     opacity: 0;
   }
 }
-
 @keyframes fadeout {
   from {
     bottom: 30px;
